# Graph_classification_related

./: Graph_classification_with_GIN.ipynb  README.md  hello.py  pyproject.toml
notebooks/: Graph_classification_with_GIN.ipynb  notebook.ipynb
src/redpanda/: model.py
src/redpanda.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
