[build-system]
requires = ["setuptools","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redpanda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "numpy>=2.1.2",
    "pandas>=2.2.3",
]

[tool.setuptools.packages.find]
where = ["src"]
[tool.setuptools.package-dir]
"" = "src" ## this is to source data from package, this this data would be within this source folder
